# libence

./: CMakeLists.txt
include/: ence.hpp
scripts/: build.sh
src/: ence.cpp  main.cpp  one.cpp  two.cpp
